--- a/packages/dso-toolkit/src/components/button/button.mixins.scss
+++ b/packages/dso-toolkit/src/components/button/button.mixins.scss
@@ -18,6 +18,7 @@
   background-color: var(--_dso-button-#{$variant}#{$state}-background-color, #{map.get($map, "background-color")});
   border-color: var(--_dso-button-#{$variant}#{$state}-border-color, #{map.get($map, "border-color")});
   color: var(--_dso-button-#{$variant}#{$state}-color, #{map.get($map, "color")});
+  float: var(--_dt-button-float-#{$variant}, none);
 }
 
 @mixin _shared(
@@ -42,7 +43,7 @@
   border-radius: button-variables.$border-radius;
   line-height: typography.$line-height-base;
   min-inline-size: $min-inline-size;
-  inline-size: var(--_dt-button-inline-size, inherit);
+  inline-size: var(--_dt-button-inline-size, auto);
   padding-block: button-variables.$block-padding;
   padding-inline: button-variables.$inline-padding;
 
@@ -396,7 +397,8 @@
 
   border: 0;
   line-height: 1;
-  padding: 0;
+  padding-inline: 0;
+  padding-block: var(--_dt-button-padding-block-tertiary, 0);
   background-color: transparent;
 
   &[disabled] {
